--- a/README.html
+++ b/README.html
@@ -299,4 +299,12 @@ it shows up one line below, so that the Root Port information doesn&rsquo;t get 
 This should create quicker results for large numbers of MSTIs, so the user knows that the script is actively working.</li>
 </ul>
 </li>
+<li>v1.3.1<ul>
+<li>Rootport-vlans template will now let the user know if there are no interfaces active in a given MSTI. </li>
+<li>Rootport-vlans template will also now output the VLAN info for MSTIs where no VLANS in the MSTI have active interfaces. </li>
+<li>VLAN info will now also be omitted when the protocol is STP, was previously only omitting for RSTP. </li>
+<li>VSTP logic fix, had the same problem as MSTP in v1.3</li>
+<li>Made the VLAN list output easier to read by injecting a space after each comma. </li>
+</ul>
+</li>
 </ul></body></html>
